--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script type="text/javascript" src="assets/javascript.js"></script>
+    <script type="text/javascript" src="script.js"></script>
     
     <title>Work Day Scheduler</title>
   </head>
